--- a/domino-ui-demo/css/themes/all-themes.css
+++ b/domino-ui-demo/css/themes/all-themes.css
@@ -8,6 +8,10 @@
 .theme-red .navbar {
   background-color: #F44336; }
 
+.theme-red .footer {
+  background-color: #F44336;
+   color: #fff; }
+
 .theme-red .navbar-brand {
   color: #fff; }
   .theme-red .navbar-brand:hover {
@@ -61,6 +65,10 @@
 .theme-pink .navbar {
   background-color: #E91E63; }
 
+.theme-pink .footer {
+  background-color: #E91E63;
+   color: #fff;}
+
 .theme-pink .navbar-brand {
   color: #fff; }
   .theme-pink .navbar-brand:hover {
@@ -112,6 +120,10 @@
 
 .theme-purple .navbar {
   background-color: #9C27B0; }
+
+.theme-purple .footer {
+  background-color: #9C27B0;
+   color: #fff;}
 
 .theme-purple .navbar-brand {
   color: #fff; }
@@ -165,6 +177,10 @@
 .theme-deep-purple .navbar {
   background-color: #673AB7; }
 
+.theme-deep-purple .footer {
+  background-color: #673AB7;
+   color: #fff;}
+
 .theme-deep-purple .navbar-brand {
   color: #fff; }
   .theme-deep-purple .navbar-brand:hover {
@@ -216,6 +232,10 @@
 
 .theme-indigo .navbar {
   background-color: #3F51B5; }
+
+.theme-indigo .footer {
+  background-color: #3F51B5;
+   color: #fff;}
 
 .theme-indigo .navbar-brand {
   color: #fff; }
@@ -269,6 +289,10 @@
 .theme-blue .navbar {
   background-color: #2196F3; }
 
+.theme-blue .footer {
+  background-color: #2196F3;
+   color: #fff;}
+
 .theme-blue .navbar-brand {
   color: #fff; }
   .theme-blue .navbar-brand:hover {
@@ -320,6 +344,10 @@
 
 .theme-light-blue .navbar {
   background-color: #03A9F4; }
+
+.theme-light-blue .footer {
+  background-color: #03A9F4;
+   color: #fff;}
 
 .theme-light-blue .navbar-brand {
   color: #fff; }
@@ -374,6 +402,10 @@
 .theme-cyan .navbar {
   background-color: #00BCD4; }
 
+.theme-cyan .footer {
+  background-color: #00BCD4;
+   color: #fff;}
+
 .theme-cyan .navbar-brand {
   color: #fff; }
   .theme-cyan .navbar-brand:hover {
@@ -425,6 +457,10 @@
 
 .theme-teal .navbar {
   background-color: #009688; }
+
+.theme-teal .footer {
+  background-color: #009688;
+   color: #fff;}
 
 .theme-teal .navbar-brand {
   color: #fff; }
@@ -478,6 +514,10 @@
 .theme-green .navbar {
   background-color: #4CAF50; }
 
+.theme-green .footer {
+  background-color: #4CAF50;
+   color: #fff;}
+
 .theme-green .navbar-brand {
   color: #fff; }
   .theme-green .navbar-brand:hover {
@@ -529,6 +569,10 @@
 
 .theme-light-green .navbar {
   background-color: #8BC34A; }
+
+.theme-light-green .footer {
+  background-color: #8BC34A;
+   color: #fff;}
 
 .theme-light-green .navbar-brand {
   color: #fff; }
@@ -582,6 +626,10 @@
 .theme-lime .navbar {
   background-color: #CDDC39; }
 
+.theme-lime .footer {
+  background-color: #CDDC39;
+   color: #fff;}
+
 .theme-lime .navbar-brand {
   color: #fff; }
   .theme-lime .navbar-brand:hover {
@@ -633,6 +681,10 @@
 
 .theme-yellow .navbar {
   background-color: #FFEB3B; }
+
+.theme-yellow .footer {
+  background-color: #FFEB3B;
+   color: #fff;}
 
 .theme-yellow .navbar-brand {
   color: #fff; }
@@ -686,6 +738,10 @@
 .theme-amber .navbar {
   background-color: #FFC107; }
 
+.theme-amber .footer {
+  background-color: #FFC107;
+   color: #fff;}
+
 .theme-amber .navbar-brand {
   color: #fff; }
   .theme-amber .navbar-brand:hover {
@@ -737,6 +793,10 @@
 
 .theme-orange .navbar {
   background-color: #FF9800; }
+
+.theme-orange .footer {
+  background-color: #FF9800;
+   color: #fff;}
 
 .theme-orange .navbar-brand {
   color: #fff; }
@@ -790,6 +850,10 @@
 .theme-deep-orange .navbar {
   background-color: #FF5722; }
 
+.theme-deep-orange .footer {
+  background-color: #FF5722;
+   color: #fff;}
+
 .theme-deep-orange .navbar-brand {
   color: #fff; }
   .theme-deep-orange .navbar-brand:hover {
@@ -842,6 +906,10 @@
 .theme-brown .navbar {
   background-color: #795548; }
 
+.theme-brown .footer {
+  background-color: #795548;
+   color: #fff;}
+
 .theme-brown .navbar-brand {
   color: #fff; }
   .theme-brown .navbar-brand:hover {
@@ -893,6 +961,10 @@
 
 .theme-grey .navbar {
   background-color: #9E9E9E; }
+
+.theme-grey .footer {
+  background-color: #9E9E9E;
+   color: #fff;}
 
 .theme-grey .navbar-brand {
   color: #fff; }
@@ -947,6 +1019,10 @@
 .theme-blue-grey .navbar {
   background-color: #607D8B; }
 
+.theme-blue-grey .footer {
+  background-color: #607D8B;
+   color: #fff;}
+
 .theme-blue-grey .navbar-brand {
   color: #fff; }
   .theme-blue-grey .navbar-brand:hover {
@@ -998,6 +1074,10 @@
 
 .theme-black .navbar {
   background-color: #000; }
+
+.theme-black .footer {
+  background-color: #000;
+   color: #fff;}
 
 .theme-black .navbar-brand {
   color: #fff; }
