--- a/domino-ui-demo/ui-demo.css
+++ b/domino-ui-demo/ui-demo.css
@@ -1,23 +1,23 @@
 pre {
-  display: block !important;
-  padding: 9.5px !important;
-  margin: 0 0 10px !important;
-  font-size: 13px !important;
-  line-height: 1.42857143 !important;
-  color: #333 !important;
-  word-break: break-all !important;
-  word-wrap: break-word !important;
-  background-color: #f5f5f5 !important;
-  border: 1px solid #cecece !important;
-   border-radius: 0px !important;
+    display: block !important;
+    padding: 9.5px !important;
+    margin: 0 0 10px !important;
+    font-size: 13px !important;
+    line-height: 1.42857143 !important;
+    color: #333 !important;
+    word-break: break-all !important;
+    word-wrap: break-word !important;
+    background-color: #f5f5f5 !important;
+    border: 1px solid #cecece !important;
+    border-radius: 0px !important;
 }
 
 code {
-  padding: 2px 0px !important;
-  font-size: 130% !important;
-  color: #051142 !important;
-  background-color: #f5f5f5 !important;
-  border-radius: 4px !important;
+    padding: 2px 0px !important;
+    font-size: 130% !important;
+    color: #051142 !important;
+    background-color: #f5f5f5 !important;
+    border-radius: 4px !important;
 }
 
 @media screen and (max-width: 992px) {
@@ -33,7 +33,7 @@ code {
     }
 }
 
-.gitter-open-chat-button{
+.gitter-open-chat-button {
     -webkit-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
 }
@@ -139,4 +139,14 @@ code {
     color: #fff;
 }
 
+@media screen and (min-width: 992px) {
+    .content-margin {
+        margin-left: 10% !important;
+        margin-right: 10% !important;
+    }
+}
+
+.invalid-section {
+    border: 1px solid #F44336;
+}
 
