--- a/domino-ui-demo/css/domino-ui.css
+++ b/domino-ui-demo/css/domino-ui.css
@@ -4,6 +4,7 @@
 @import url(../plugins/animate-css/animate.css);
 @import url(../plugins/waitme/waitMe.css);
 @import url(../plugins/bootstrap-select/css/bootstrap-select.css);
+@import url(../plugins/stepper/materialize-stepper.css);
 @import url(materialize.css);
 @import url(style.css);
 @import url(colors.css);
