--- a/domino-ui-demo/css/style.css
+++ b/domino-ui-demo/css/style.css
@@ -7001,3 +7001,8 @@ a.disabled {
 .panel-group .full-body .panel[class*="col-"] .panel-body {
     border-top-color: #fff;
 }
+
+.default-shadow{
+    -webkit-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+}
